Setting up the 4th year project management system
Setting up the classes to be used in the 4th year project management system.

--- a/Pat Buchanans/src/main/resources/Template/addressBook.html
+++ b/Pat Buchanans/src/main/resources/Template/addressBook.html
@@ -8,8 +8,8 @@
 
 <h1>Result</h1>
 <body>
-<p th:each="addressBook: ${AddressBook}"
-   th:text="${AddressBook.jbuddies}">buddies</p>
+<p th:each="prof: ${AddressBook}"
+   th:text="${AddressBook.topics}">buddies</p>
 </body>
 </body>
 </html>
