--- a/src/main/resources/templates/Addform.html
+++ b/src/main/resources/templates/Addform.html
@@ -11,6 +11,7 @@
     <p>Phone Number: <input type="text" th:field="*{restrictions}" /></p>
     <p>Address: <input type="number" th:field="*{max_Students}" /></p>
     <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
+    <button type="submit" action="/">Home Page</button>
 </form>
 </body>
 </html>
