--- a/src/main/resources/templates/Student.html
+++ b/src/main/resources/templates/Student.html
@@ -1,29 +1,29 @@
-<!DOCTYPE html>
-<%@taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core"%>
-
-<html lang="en" xmlns:c="http://www.w3.org/1999/XSL/Transform" xmlns:th="http://www.w3.org/1999/xhtml">
-
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:form="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <title>Student</title>
+    <title>Student Registration</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+<h1>Form</h1>
 
-<form action="#" th:action="@{/student}" th:object="${student}" method="post">
-    <p>Student Name: <input type="text" th:field="*{name}" /></p>
-    <p>Student ID: <input type="text" th:field="*{id}" /></p>
-</form>
+<table>
+    <thead>
+    <tr>
+        <th> Description </th>
+        <th> Restrictions </th>
+        <th> Max Student </th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="topic : ${topicList}">
+        <td><span th:text="${topic.description}"> Description </span></td>
+        <td><span th:text="${topic.restrictions}"> Restrictions </span></td>
+        <td><span th:number="${topic.max_Students}"> Max Student</span></td>
+    </tr>
 
-<c:if test="${not empty lists}">
-
-    <ul>
-        <c:forEach var="listValue" items="${lists}">
-            <li>${listValue}</li>
-        </c:forEach>
-    </ul>
-
-</c:if>
-
+    </tbody>
+</table>
 
 </body>
 </html>
