fixed the prof view
With the help of ahmed, made the prof view work correctly

Co-Authored-By: Ahmed Khattab <ahmed.khattab20@hotmail.com>

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
     margin-right: auto;">
         <button class="btn btn-outline-success" type="submit" formaction="/add">Professor</button>
         <button class="btn btn-outline-danger" type="submit" formaction="/add">Coordinator</button>
-        <button class="btn btn-outline-primary" type="submit" formaction="/student">Student</button>
+        <button class="btn btn-outline-primary" type="submit" formaction="/students">Student</button>
     </form>
 </nav>
 <!-- Optional JavaScript -->
