fixed /deadlines to /unenrolled as suggested

--- a/src/main/resources/templates/UnenrolledStudents.html
+++ b/src/main/resources/templates/UnenrolledStudents.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Deadlines</title>
+    <title>Unenrolled Students</title>
 </head>
 <body>
 <h1>Students without Topics</h1>
