--- a/src/main/resources/templates/ProfTopicResultsForm.html
+++ b/src/main/resources/templates/ProfTopicResultsForm.html
@@ -14,7 +14,7 @@
 <form class="form-inline" style=" margin-left: auto;
     margin-right: auto;">
     <button class="btn btn-outline-success" type="submit" formaction="/add">Create another Project</button>
-    <button class="btn btn-outline-success" type="submit" formaction="/deadline">View Students without a Project</button>
+    <button class="btn btn-outline-success" type="submit" formaction="/unenrolled">View Students without a Project</button>
 </form>
 </body>
 </html>
