--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
     <form class="form-inline" style=" margin-left: auto;
     margin-right: auto;">
         <button class="btn btn-outline-success" type="submit" formaction="/add">Professor</button>
-        <button class="btn btn-outline-danger" type="submit" formaction="/add">Coordinator</button>
+        <button class="btn btn-outline-danger" type="submit" formaction="/coordinator">Coordinator</button>
         <button class="btn btn-outline-primary" type="submit" formaction="/students">Student</button>
     </form>
 </nav>
