--- a/src/main/resources/templates/CreateEvent.html
+++ b/src/main/resources/templates/CreateEvent.html
@@ -11,8 +11,8 @@
     <p>Event Title: <input type="text" th:field="*{eventName}" /></p>
     <p>Event Description:
     <p><textarea input type="text" th:field="*{description}" rows="10" cols="40"></textarea></p>
-    <p>Event ID:
-    <p><textarea input type="number" th:field="*{id}" rows="10" cols="40"></textarea></p>
+    <p>Event Deadline:
+    <p><textarea input type="text" th:field="*{deadline}" rows="10" cols="40"></textarea></p>
     <p><input type="submit" value="Submit" /><input type="reset" value="Reset" /></p>
 </form>
 </body>
