--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
     margin-right: auto;">
         <button class="btn btn-outline-success" type="submit" formaction="/prof">Professor</button>
         <button class="btn btn-outline-danger" type="submit" formaction="/coordinator">Coordinator</button>
-        <button class="btn btn-outline-primary" type="submit" formaction="/students">Student</button>
+        <button class="btn btn-outline-primary" type="submit" formaction="/StudentHome">Student</button>
     </form>
 </nav>
 <!-- Optional JavaScript -->
