--- a/src/main/resources/templates/Addform.html
+++ b/src/main/resources/templates/Addform.html
@@ -14,6 +14,8 @@
     <p>Topic Restrictions:
     <p><textarea input type="text" th:field="*{restrictions}" rows="10" cols="40"></textarea></p>
     <p>Max. Desired Students: <input type="number" th:field="*{max_Students}" /></p>
+    <p>Project Start Date:<input type="date" name="StartDate" th:field="*{startdate}">
+        Project End Date: <input type="date" name="EndDate" th:field="*{endDate}"></p>
     <p><input type="submit" value="Submit" /><input type="reset" value="Reset" /></p>
 </form>
 </body>
