Created Prof Topic HTML which is for viewing individual projects

--- a/src/main/resources/templates/Prof.html
+++ b/src/main/resources/templates/Prof.html
@@ -23,12 +23,20 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 <table>
+    <col width = "200">
+    <col width = "200">
+    <col width = "130">
+    <col width = "130">
+    <col width = "130">
+    <col width = "130">
     <thead>
     <tr>
         <th> Topic Title </th>
-        <th> Description </th>
         <th> Program Restriction </th>
+        <th> Current # of students </th>
         <th> Max Students Allowed </th>
+        <th> View Topic </th>
+        <th> Archive Topic </th>
     </tr>
     </thead>
     <tbody>
