--- a/src/main/resources/templates/Addform.html
+++ b/src/main/resources/templates/Addform.html
@@ -14,6 +14,10 @@
     <p>Topic Restrictions:
     <p><textarea input type="text" th:field="*{restrictions}" rows="10" cols="40"></textarea></p>
     <p>Max. Desired Students: <input type="number" th:field="*{max_Students}" /></p>
+    <h2> Select your Availability:</h2>
+    <p>Preference #1 <input type="datetime-local" th:field="*{preference1}" /></p>
+    <p>Preference #2 <input type="datetime-local" th:field="*{preference2}" /></p>
+    <p>Preference #3 <input type="datetime-local" th:field="*{preference3}" /></p>
     <p><input type="submit" value="Submit" /><input type="reset" value="Reset" /></p>
 </form>
 </body>
