Added buttons for prof to view topic and to archive a topic

--- a/src/main/resources/templates/Prof.html
+++ b/src/main/resources/templates/Prof.html
@@ -45,6 +45,9 @@
         <td><span th:text="${topic.description}"> Description </span></td>
         <td><span th:text="${topic.restrictions}"> Program Restriction </span></td>
         <td><span th:text="${topic.max_Students}"> Max Students Allowed </span></td>
+        <td><form><input type=submit value="View" style="width:100%"></form></td>
+        <td><form><input type=submit value="Archive" style="width:100%"></form></td>
+        <td><form><input type=submit value="De-Archive" style="width:100%"></form></td>
     </tr>
     </tbody>
 </table>
