--- a/src/main/resources/templates/Coordinator.html
+++ b/src/main/resources/templates/Coordinator.html
@@ -34,8 +34,8 @@
         <td><span th:text="${topic.description}"> Description </span></td>
         <td><span th:text="${topic.restrictions}"> Program Restriction </span></td>
         <td><span th:text="${topic.max_Students}"> Max Students Allowed </span></td>
-        <td> <button class="btn btn-outline-danger" type="submit" formaction="/addNotifications">Add Notification</button>
-        </td>
+     <td> <form> <button class="btn btn-outline-success" type="submit" formaction="/addNotifications">Add Notification</button>
+     </form>  </td>
 
 
     </tr>
