--- a/src/main/resources/templates/addNotifications.html
+++ b/src/main/resources/templates/addNotifications.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Add a Notification</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-
+<h1>Add A Notification Form</h1>
+<form action="#" th:action="@{/add}" th:object="${topic}" method="post">
+    <p>Topic Description:
+    <p><textarea input type="text" th:field="*{description}" rows="10" cols="40"></textarea></p>
+    <p><input type="submit" value="Submit" /><input type="reset" value="Reset" /></p>
+</form>
 </body>
 </html>
