--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -5,19 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<table>
-    <thead>
-    <tr>
-        <th> Username </th>
-        <th> Password </th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="user : ${user}">
-        <td><span th:text="${user.username}"> Username </span></td>
-        <td><span th:text="${user.password}"> Password </span></td>
-    </tr>
-    </tbody>
-</table>
+<p>You are registered</p>
 </body>
 </html>
