student can now pick dates for avalabilty and gives them an option to go to that page from their homescreen

--- a/src/main/resources/templates/StudentHome.html
+++ b/src/main/resources/templates/StudentHome.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title >Welcome Student: Ahmed</title>
@@ -12,7 +12,7 @@
     margin-right: auto;">
         <button class="btn btn-outline-success" type="submit" formaction="/upload">Upload 4th Year Report</button>
         <button class="btn btn-outline-danger" type="submit" formaction="/">Home</button>
-
+        <button class="btn btn-outline-primary" type="submit" formaction="/dateSubmit">Submit Availability</button>
     </form>
 </nav>
 </body>
