--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -14,24 +14,19 @@
 
 </head>
 <body>
-
-<div sec:authorize="hasRole('USER')">
+<div sec:authorize="hasRole('ADMIN')">
 
     <nav class="navbar navbar-dark bg-dark">
         <a class="navbar-brand" style="color:white" th:inline = "text">Welcome [[${#httpServletRequest.remoteUser}]]!  </a>
         <form class="form-inline" style=" margin-left: auto;
     margin-right: auto;">
 
-            <button class="btn btn-outline-primary" type="submit" formaction="/StudentHome">Student</button>
-
+            <button  class="btn btn-outline-success" type="submit" formaction="/prof">Professor</button>
         </form>
         <form th:action = "@{/logout}" method = "post">
             <input class="btn btn-outline-warning" type = "submit" value = "Sign Out"/>
         </form>
     </nav>
-
-
-
 </div>
 
 <!-- Optional JavaScript -->
