--- a/src/main/resources/templates/Notifications.html
+++ b/src/main/resources/templates/Notifications.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Add A Notification Form</h1>
-<form action="#" th:action="@{/coordinator}" th:object="${noti}" method="get">
+<form action="#" th:action="@{/coordinator}" method="get">
     <p>Topic Notification:
     <p><textarea input type="text" th:object="${noti}" rows="10" cols="40"></textarea></p>
     <p><input type="submit" value="Submit" />
