--- a/src/main/resources/templates/StudentHome.html
+++ b/src/main/resources/templates/StudentHome.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html  "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:th="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title >Welcome Student: Ahmed</title>
+    <title >Student Home</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" style=" color:white;">Welcome Student: Ahmed Khattab</a>
+    <a class="navbar-brand" style=" color:white;">Welcome Student</a>
     <form class="form-inline" style=" margin-left: auto;
     margin-right: auto;">
-        <button class="btn btn-outline-success" type="submit" formaction="/upload">Upload 4th Year Report</button>
         <button class="btn btn-outline-danger" type="submit" formaction="/">Home</button>
         <button class="btn btn-outline-primary" type="submit" formaction="/dateSubmit">Submit Availability</button>
     </form>
@@ -34,7 +33,8 @@
         <td><span th:text="${topic.description}"> Description </span></td>
         <td><span th:text="${topic.restrictions}"> Program Restriction </span></td>
         <td><span th:text="${topic.max_Students}"> Max Students Allowed </span></td>
-        <td><form >
+        <td><span th:number="${topic.max_Students}"> Max Student</span></td>
+        <td><form>
             <input method="get" type='submit' name='join' value='Join' formaction="/join" />
             <input method="post" type='submit' name='detail' value='Detail' formaction="/detail" />
         </form></td>
