--- a/src/main/resources/templates/Addform.html
+++ b/src/main/resources/templates/Addform.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Add A Topic Form</h1>
     <form action="#" th:action="@{/add}" th:object="${topic}" method="post">
-        <p>Name: </p>
+        <p>Name: Dr.B.Esfandiari</p>
     <p>Topic Title: <input type="text" th:field="*{topicName}" /></p>
     <p>Topic Description:
     <p><textarea input type="text" th:field="*{description}" rows="10" cols="40"></textarea></p>
