--- a/src/main/resources/templates/StudentHome.html
+++ b/src/main/resources/templates/StudentHome.html
@@ -12,7 +12,7 @@
     <a class="navbar-brand" style=" color:white;">Welcome Student</a>
     <form class="form-inline" style=" margin-left: auto;
     margin-right: auto;">
-        <button class="btn btn-outline-danger" type="submit" formaction="/">Home</button>
+        <button class="btn btn-outline-danger" type="submit" formaction="/index">Home</button>
         <button class="btn btn-outline-primary" type="submit" formaction="/dateSubmit">Submit Availability</button>
     </form>
 </nav>
