Minor Changes Added and Fixed Buttons

--- a/src/main/resources/templates/Coordinator.html
+++ b/src/main/resources/templates/Coordinator.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="/coord">Coordinator Home </a>
+    <a class="navbar-brand" href="/coord">[[${#httpServletRequest.remoteUser}]]'s Home </a>
     <form class="form-inline" style=" margin-left: auto;
     margin-right: auto;">
         <button class="btn btn-outline-primary" type="submit" formaction="/enrollment">Student Enrollment</button>
