--- a/src/main/resources/templates/Prof.html
+++ b/src/main/resources/templates/Prof.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" href="/professor">Professor Home </a>
+    <a class="navbar-brand" href="/professor">[[${#httpServletRequest.remoteUser}]]'s Homepage </a>
     <form class="form-inline" style=" margin-left: auto;
     margin-right: auto;">
         <button class="btn btn-outline-primary" type="submit" formaction="/add">Add Topic</button>
