--- a/src/main/resources/templates/datePicker.html
+++ b/src/main/resources/templates/datePicker.html
@@ -2,16 +2,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title >Welcome Student: Ahmed</title>
+    <title >Date Picker</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark">
-    <a class="navbar-brand" style=" color:white;">Welcome Student: Ahmed Khattab</a>
+    <a class="navbar-brand" style=" color:white;">Welcome [[${#httpServletRequest.remoteUser}]]!</a>
     <form class="form-inline" style=" margin-left: auto;
     margin-right: auto;">
         <button class="btn btn-outline-success" type="submit" formaction="/upload">Upload 4th Year Report</button>
-        <button class="btn btn-outline-danger" type="submit" formaction="/">Home</button>
+        <button class="btn btn-outline-danger" type="submit" formaction="/index">Home</button>
     </form>
 </nav>
 <form action="#" th:action="@{/dateSubmit}" th:object="${date}" method="post">
